truncate description, only allow delete if no items, fixed height

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -32,4 +32,5 @@
 
 .well {
   margin: 10px;
+  height: 120px;
 }
